# lawnch

./: .gitignore  CMakeLists.txt  README.md  flake.nix  lawnchpm  shell.nix
assets/: style.css
config/: config.ini  config.json  config.toml
config/presets/: compact.toml  material-3.toml  panel.toml  retro.toml  spotlight.toml
config/themes/: ayu-dark.toml  catppuccin-mocha.toml  dracula.toml  gruvbox.toml  material-ocean.toml  monokai-pro.toml  nord.toml  one-dark.toml  rose-pine-moon.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
nix/: default.nix  lawnch.nix  options.nix
plugins/: README.md  lawnch_plugin_api.h
plugins/calculator/: CMakeLists.txt  calculator.cpp  default.nix  flake.nix  pinfo
plugins/clipboard/: CMakeLists.txt  clipboard.cpp  default.nix  flake.nix  pinfo
plugins/command/: CMakeLists.txt  command.cpp  default.nix  flake.nix  pinfo
plugins/emoji/: CMakeLists.txt  default.nix  deps.nix  emoji.cpp  flake.nix  pinfo
plugins/files/: CMakeLists.txt  default.nix  files.cpp  flake.nix  pinfo
plugins/google/: CMakeLists.txt  default.nix  flake.nix  google.cpp  pinfo
plugins/powermenu/: CMakeLists.txt  default.nix  flake.nix  pinfo  powermenu.cpp
plugins/theme-manager/: CMakeLists.txt  default.nix  flake.nix  pinfo  theme_manager.cpp
plugins/url/: CMakeLists.txt  default.nix  flake.nix  pinfo  url.cpp
plugins/wallpapers/: CMakeLists.txt  default.nix  flake.nix  pinfo  wallpapers.cpp
plugins/youtube/: CMakeLists.txt  default.nix  deps.nix  flake.nix  pinfo  youtube.cpp
src/: config.cpp  config.hpp  main.cpp  search.cpp  search.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/app/: application.cpp  application.hpp
src/cli/: parser.cpp  parser.hpp  pm.cpp  pm.hpp  tm.cpp  tm.hpp
src/config/: config_manager.cpp  config_manager.hpp  config_types.hpp
src/core/config/: apply_toml.cpp  config.hpp  defaults.cpp  manager.cpp  manager.hpp  manager_impl.hpp  validator.cpp  validator.hpp
src/core/icons/: lru_cache.hpp  manager.cpp  manager.hpp  theme_loader.cpp  theme_loader.hpp
src/core/search/: engine.cpp  engine.hpp  history.cpp  history.hpp  interface.hpp
src/core/search/plugins/: adapter.cpp  adapter.hpp  manager.cpp  manager.hpp
src/core/search/providers/: apps.cpp  bins.cpp  modes.hpp
src/core/window/input/: history.cpp  history.hpp  keybinding_manager.cpp  keybinding_manager.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp
src/core/window/render/: background.cpp  background.hpp  buffer.cpp  buffer.hpp  input_box.cpp  input_box.hpp  render_state.hpp  renderer.cpp  renderer.hpp  results_list.cpp  results_list.hpp
src/core/window/render/components/: background.cpp  background.hpp  clock.cpp  clock.hpp  component_base.hpp  input_box.cpp  input_box.hpp  input_prompt.cpp  input_prompt.hpp  preview.cpp  preview.hpp  results_container.cpp  results_container.hpp  results_count.cpp  results_count.hpp
src/core/window/wayland/: display.cpp  display.hpp  layer_surface.cpp  layer_surface.hpp  registry.cpp  registry.hpp  seat.cpp  seat.hpp
src/helpers/: config_parse.cpp  config_parse.hpp  desktop_entry.cpp  desktop_entry.hpp  fs.cpp  fs.hpp  gfx.cpp  gfx.hpp  image_cache.cpp  image_cache.hpp  locale.cpp  locale.hpp  logger.cpp  logger.hpp  process.cpp  process.hpp  string.cpp  string.hpp
src/ipc/: client.cpp  client.hpp  const.hpp  server.cpp  server.hpp
src/search/: apps.cpp  bins.cpp  interface.hpp  modes.hpp  plugin_adapter.cpp  plugin_adapter.hpp  plugin_manager.cpp  plugin_manager.hpp  search.cpp  search.hpp
src/window/: handlers.cpp  icon.cpp  icon.hpp  input.cpp  render.cpp  window.cpp  window.hpp
themes/dracula/: dracula-compact.ini  dracula-material-3.ini
themes/gruvbox/: gruvbox-compact.ini
themes/solarized/: solarized-light-material-3.ini
